--- a/graph-dijkstra/main.ipynb
+++ b/graph-dijkstra/main.ipynb
@@ -112,7 +112,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "graph = ox.load_graphml('F:/Barati Nia/karamzade/graph/tehran-network.graphml')\n",
+    "graph = ox.load_graphml('graph/tehran-network.graphml')\n",
     "nodes, edges = ox.graph_to_gdfs(graph, nodes=True, edges=True)\n",
     "\n",
     "edges['maxspeed'] = edges['maxspeed'].replace({\"0\": np.nan})\n",
